--- a/index.html
+++ b/index.html
@@ -6,20 +6,15 @@
 <title>ChadiliZe — Telegram Mini App</title>
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
 <style>
-/* Lane Hopper visuals */
-#laneCanvas{
-  width:100%;
-  height:100%;
-  display:block;
-  background:
-    radial-gradient(140% 100% at 50% 30%, #0f1822 0%, #0a0f14 60%) no-repeat;
-  border-radius:10px;
-}
-
-.lane-road   { background:#101820; }
-.lane-safe   { background:#0d141a; }
-
-#hopperDpad { bottom: calc(14px + env(safe-area-inset-bottom)); }
+/* Lane Hopper visuals + touch fixes */
+  #laneCanvas{
+    width:100%; height:100%; display:block; border-radius:10px;
+    background: radial-gradient(140% 100% at 50% 30%, #0f1822 0%, #0a0f14 60%) no-repeat;
+    /* IMPORTANT: let pointer events reach JS instead of scrolling/zooming the page */
+    touch-action: none;            /* prevents pan/zoom gestures stealing input */
+    user-select: none;
+    -webkit-user-select: none;
+  }
 
 /* ===== Tile Rush (Rhythm) ===== */
 .tr-wrap{ position:relative; width:100%; height:100%; background:linear-gradient(180deg,#0b0f14,#070a0d); border-radius:10px; overflow:hidden; }
@@ -521,7 +516,7 @@ canvas{ display:block }
       </div>
     </div>
 
-<!-- LANE HOPPER Modal -->
+<!-- ===== LANE HOPPER Modal (fixed input) ===== -->
 <div class="overlay" id="laneModal">
   <div class="panel">
     <div class="row">
@@ -540,6 +535,14 @@ canvas{ display:block }
 
     <div class="game-9x16">
       <canvas id="laneCanvas" class="full"></canvas>
+
+      <!-- On-screen D-pad (optional but great on phones) -->
+      <div class="dpad" id="laneDpad" aria-hidden="false">
+        <button class="up"    aria-label="Up">▲</button>
+        <button class="left"  aria-label="Left">◀</button>
+        <button class="right" aria-label="Right">▶</button>
+        <button class="down"  aria-label="Down">▼</button>
+      </div>
     </div>
   </div>
 </div>
@@ -2422,68 +2425,67 @@ function openBreaker(){
   resetGame();
 })();
 
-/* ===== Lane Hopper (Frogger/Crossy-style) ===== */
+/* ===== Lane Hopper (Frogger/Crossy-style) — robust input ===== */
 (function(){
   const cvs = document.getElementById('laneCanvas');
   const ctx = cvs?.getContext('2d');
   if(!cvs || !ctx) return;
 
-  // -- High-DPI sizing (draw in CSS pixels, render at device pixels)
+  // Ensure this opener exists (your Play tile calls openLane / openLaneHopper)
+  window.openLaneHopper = () => {
+    closeOverlay('playOverlay');
+    openOverlay('laneModal');
+    setTimeout(resizeCanvas, 30);
+  };
+  window.openLane = window.openLaneHopper; // back-compat
+
+  /* ---------- HiDPI sizing ---------- */
   let DPR = Math.max(1, Math.floor(window.devicePixelRatio || 1));
   function resizeCanvas(){
     const r = cvs.getBoundingClientRect();
     DPR = Math.max(1, Math.floor(window.devicePixelRatio || 1));
     cvs.width  = Math.max(2, Math.floor(r.width  * DPR));
     cvs.height = Math.max(2, Math.floor(r.height * DPR));
-    ctx.setTransform(DPR,0,0,DPR,0,0);  // draw using CSS px
+    ctx.setTransform(DPR,0,0,DPR,0,0);  // draw in CSS px
+    W = Math.floor(r.width);
+    H = Math.floor(r.height);
+    cellW = W / COLS;
+    cellH = H / ROWS;
+    player.r = Math.max(8, Math.min(cellW, cellH)*0.33);
   }
 
-  // --- Game model
+  /* ---------- Game model ---------- */
   let running=false, paused=false, loop=null, lastTs=0;
   let score=0, earned=0;
 
-  // Grid
   const COLS = 7;
-  const ROWS = 16;           // whole board
-  const SAFE_ROWS = [0, ROWS-1]; // top/bottom safe rows
+  const ROWS = 16;
+  const SAFE_ROWS = [0, ROWS-1];
   let W=0, H=0, cellW=0, cellH=0;
 
-  const lanes=[]; // moving obstacles per row (excluding safe rows)
-  const cars=[];  // active obstacles
+  const lanes=[];       // meta per row
+  const cars=[];        // active obstacles
   const coins=[];
 
-  const player = {
-    col: Math.floor(COLS/2),
-    row: ROWS-1,
-    r: 0, // pixel radius computed on resize
-    alive: true
-  };
+  const player = { col: Math.floor(COLS/2), row: ROWS-1, r: 10, alive:true };
 
   // Difficulty
-  let baseSpeed = 90; // px/s
-  let spawnEvery = 1100; // ms
-  const laneDir = {}; // row -> dir (-1 or +1)
-  const laneTimer = {}; // row -> ms
-
-  // Input (swipes + keyboard)
-  let swipe = { active:false, x:0, y:0, id:null };
+  let baseSpeed = 90;        // px/s
+  let spawnEvery = 1100;     // ms
+  const laneDir = {};        // row -> dir (-1 / +1)
+  const laneTimer = {};      // row -> ms
+  let coinTimer = 0;
 
   function reset(){
     resizeCanvas();
-    W = Math.floor(cvs.getBoundingClientRect().width);
-    H = Math.floor(cvs.getBoundingClientRect().height);
-    cellW = W / COLS;
-    cellH = H / ROWS;
     player.col = Math.floor(COLS/2);
     player.row = ROWS-1;
     player.alive = true;
-    player.r = Math.max(8, Math.min(cellW, cellH)*0.33);
 
     score = 0; earned = 0;
     cars.length = 0; coins.length = 0; lanes.length = 0;
 
-    // Build lane metadata (rows 2..(ROWS-3) are roads)
-    for(let r=1; r<ROWS-1; r++){
+    for(let r=0; r<ROWS; r++){
       const type = SAFE_ROWS.includes(r) ? 'safe' : 'road';
       lanes[r] = { type };
       if(type==='road'){
@@ -2491,12 +2493,14 @@ function openBreaker(){
         laneTimer[r] = 0;
       }
     }
-    updateScoreUI();
+    updateHUD();
   }
 
-  function updateScoreUI(){
-    document.getElementById('laneScore').textContent = Math.floor(score);
-    document.getElementById('laneEarned').textContent = earned;
+  function updateHUD(){
+    const sEl = document.getElementById('laneScore');
+    const eEl = document.getElementById('laneEarned');
+    if(sEl) sEl.textContent = Math.floor(score);
+    if(eEl) eEl.textContent = earned;
   }
 
   function spawnCar(row){
@@ -2509,64 +2513,52 @@ function openBreaker(){
     cars.push({row, x:startX, y, w, h, dir, speed, hue: 200 + (row*13)%80});
   }
 
-  function trySpawn(dt){
+  function maybeSpawnCars(dt){
     for(let r=1; r<ROWS-1; r++){
       if(lanes[r].type!=='road') continue;
       laneTimer[r] += dt*1000;
       const gap = spawnEvery * (0.85 + Math.random()*0.5);
-      if(laneTimer[r] >= gap){
-        laneTimer[r] = 0;
-        spawnCar(r);
-      }
+      if(laneTimer[r] >= gap){ laneTimer[r] = 0; spawnCar(r); }
     }
   }
 
   function spawnCoin(){
-    // place on a random road cell not occupied by player
     const rr = 1 + Math.floor(Math.random()*(ROWS-2));
     const cc = Math.floor(Math.random()*COLS);
     if (rr===player.row && cc===player.col) return;
     coins.push({ row: rr, col: cc, t: 0 });
   }
 
-  let coinTimer = 0;
-
   function update(dt){
     if(!player.alive) return;
 
-    // move cars
+    // Move cars
     for(let i=cars.length-1;i>=0;i--){
       const c = cars[i];
       c.x += c.dir * c.speed * dt;
-      if (c.dir>0 && c.x > W+40) cars.splice(i,1);
-      else if (c.dir<0 && c.x < -c.w-40) cars.splice(i,1);
+      if ((c.dir>0 && c.x > W+40) || (c.dir<0 && c.x < -c.w-40)) cars.splice(i,1);
     }
 
-    // spawn stream
-    trySpawn(dt);
+    maybeSpawnCars(dt);
 
-    // coins
+    // Coins
     coinTimer += dt;
-    if (coinTimer > 1.6){
-      coinTimer = 0;
-      if (coins.length < 3) spawnCoin();
-    }
+    if (coinTimer > 1.5){ coinTimer = 0; if (coins.length < 3) spawnCoin(); }
     for(const k of coins) k.t += dt;
 
-    // collisions
+    // Collisions
     const px = player.col*cellW + cellW*0.5;
     const py = player.row*cellH + cellH*0.5;
     const pr = player.r*0.85;
 
     // car hit
     for(const c of cars){
-      const cx1=c.x, cy1=c.y, cx2=c.x+c.w, cy2=c.y+c.h;
-      const nx = Math.max(cx1, Math.min(px, cx2));
-      const ny = Math.max(cy1, Math.min(py, cy2));
+      const nx = Math.max(c.x, Math.min(px, c.x+c.w));
+      const ny = Math.max(c.y, Math.min(py, c.y+c.h));
       const dx = px-nx, dy=py-ny;
       if (dx*dx+dy*dy <= pr*pr){
         player.alive=false;
-        showToast('You were hit! Press Start to try again.');
+        showToast?.('You were hit! Press Start to try again.');
         break;
       }
     }
@@ -2580,14 +2572,13 @@ function openBreaker(){
       if (dx*dx+dy*dy <= (pr+10)*(pr+10)){
         coins.splice(i,1);
         earned += 50;
-        updateScoreUI();
       }
     }
 
-    // scoring
+    // Scoring
     score += dt*60;
 
-    // reached top -> reset to bottom & ramp difficulty
+    // Reached top => reset & ramp a bit
     if(player.row===0){
       player.row = ROWS-1;
       baseSpeed *= 1.06;
@@ -2595,95 +2586,67 @@ function openBreaker(){
     }
   }
 
-  function drawBackground(){
-    // lanes
+  function drawBG(){
     for(let r=0;r<ROWS;r++){
       const y = r*cellH;
       ctx.fillStyle = (r===0 || r===ROWS-1) ? '#0f171e' : ((r%2)?'#0b1319':'#0a1116');
       ctx.fillRect(0,y,W,cellH);
       if(lanes[r]?.type==='road'){
-        // faint dashed lines
         ctx.strokeStyle='rgba(255,255,255,0.06)';
         ctx.setLineDash([10,10]);
         ctx.lineWidth=1;
-        ctx.beginPath();
-        ctx.moveTo(0,y+cellH*0.5);
-        ctx.lineTo(W,y+cellH*0.5);
-        ctx.stroke();
+        ctx.beginPath(); ctx.moveTo(0,y+cellH*0.5); ctx.lineTo(W,y+cellH*0.5); ctx.stroke();
         ctx.setLineDash([]);
       }
     }
   }
-
   function drawPlayer(){
     const x = player.col*cellW + cellW*0.5;
     const y = player.row*cellH + cellH*0.5;
     const r = player.r;
-
-    // glow
     const g = ctx.createRadialGradient(x,y,0,x,y,r*2.3);
     g.addColorStop(0,'rgba(120,200,255,0.18)');
     g.addColorStop(1,'rgba(120,200,255,0)');
     ctx.fillStyle=g; ctx.beginPath(); ctx.arc(x,y,r*2.3,0,Math.PI*2); ctx.fill();
 
-    // body
     const body = ctx.createRadialGradient(x-r*0.3,y-r*0.35,1,x,y,r);
-    body.addColorStop(0,'#e8f3ff');
-    body.addColorStop(1,'#78adff');
-    ctx.fillStyle=body;
-    ctx.beginPath(); ctx.arc(x,y,r,0,Math.PI*2); ctx.fill();
+    body.addColorStop(0,'#e8f3ff'); body.addColorStop(1,'#78adff');
+    ctx.fillStyle=body; ctx.beginPath(); ctx.arc(x,y,r,0,Math.PI*2); ctx.fill();
 
-    // eyes
     ctx.fillStyle='#0a0e12';
     ctx.beginPath(); ctx.arc(x-r*0.28,y-r*0.15,r*0.12,0,Math.PI*2); ctx.fill();
     ctx.beginPath(); ctx.arc(x+r*0.28,y-r*0.15,r*0.12,0,Math.PI*2); ctx.fill();
   }
-
   function drawCars(){
     for(const c of cars){
       ctx.fillStyle = `hsl(${c.hue},70%,55%)`;
       ctx.fillRect(c.x, c.y, c.w, c.h);
-      // windows
       ctx.fillStyle='rgba(255,255,255,0.25)';
       ctx.fillRect(c.x+c.w*0.1, c.y+c.h*0.22, c.w*0.25, c.h*0.26);
       ctx.fillRect(c.x+c.w*0.65, c.y+c.h*0.22, c.w*0.25, c.h*0.26);
     }
   }
-
   function drawCoins(){
     for(const c of coins){
       const cx = c.col*cellW + cellW*0.5;
       const cy = c.row*cellH + cellH*0.5;
       const pulse = 1 + Math.sin(c.t*6)*0.08;
-
-      // glow
-      ctx.save();
-      ctx.globalCompositeOperation='lighter';
+      ctx.save(); ctx.globalCompositeOperation='lighter';
       const glow = ctx.createRadialGradient(cx, cy, 0, cx, cy, 26);
       glow.addColorStop(0,'rgba(255,216,107,0.45)');
       glow.addColorStop(1,'rgba(255,216,107,0)');
       ctx.fillStyle=glow; ctx.beginPath(); ctx.arc(cx,cy,26,0,Math.PI*2); ctx.fill();
       ctx.restore();
-
-      // coin
-      ctx.save();
-      ctx.translate(cx,cy);
-      ctx.scale(pulse,1);
-      ctx.beginPath();
-      ctx.arc(0,0,12,0,Math.PI*2);
+      ctx.save(); ctx.translate(cx,cy); ctx.scale(pulse,1);
+      ctx.beginPath(); ctx.arc(0,0,12,0,Math.PI*2);
       const gr = ctx.createRadialGradient(-4,-4,1,0,0,12);
       gr.addColorStop(0,'#fff5c8'); gr.addColorStop(0.6,'#ffd86b'); gr.addColorStop(1,'#d79a00');
-      ctx.fillStyle=gr; ctx.fill();
-      ctx.restore();
+      ctx.fillStyle=gr; ctx.fill(); ctx.restore();
     }
   }
-
   function draw(){
     ctx.clearRect(0,0,W,H);
-    drawBackground();
-    drawCoins();
-    drawCars();
-    drawPlayer();
+    drawBG(); drawCoins(); drawCars(); drawPlayer();
   }
 
   function frame(ts){
@@ -2692,51 +2655,90 @@ function openBreaker(){
     const dt = Math.min(0.035, (ts-lastTs)/1000);
     lastTs = ts;
     if(!paused && player.alive){
-      update(dt);
-      updateScoreUI();
+      update(dt); updateHUD();
     }
     draw();
     loop = requestAnimationFrame(frame);
   }
 
-  // Movement (swipe or keys)
+  /* ---------- Movement helpers ---------- */
   function move(dx, dy){
     if(!player.alive) return;
     player.col = Math.max(0, Math.min(COLS-1, player.col + dx));
     player.row = Math.max(0, Math.min(ROWS-1, player.row + dy));
   }
 
-  function onPointerDown(e){
-    swipe.active=true; swipe.id=e.pointerId; swipe.x=e.clientX; swipe.y=e.clientY;
+  /* ---------- Input: swipe + tap zones + D-pad + keyboard ---------- */
+  const swipe = { active:false, id:null, x:0, y:0 };
+
+  function pressStart(e){
+    e.preventDefault();
+    swipe.active = true; swipe.id = e.pointerId; swipe.x = e.clientX; swipe.y = e.clientY;
+    // capture all subsequent pointer events for this pointer (robust on mobile webviews)
     try{ cvs.setPointerCapture(e.pointerId); }catch{}
   }
-  function onPointerUp(e){
-    if(!swipe.active) return;
+  function pressMove(e){
+    if(!swipe.active || e.pointerId!==swipe.id) return;
+    // (optional: could live-preview a direction here)
+  }
+  function pressEnd(e){
+    if(!swipe.active || e.pointerId!==swipe.id) return;
+    e.preventDefault();
     const dx = e.clientX - swipe.x;
     const dy = e.clientY - swipe.y;
     swipe.active=false; swipe.id=null;
+    try{ cvs.releasePointerCapture(e.pointerId); }catch{}
+
     const ax=Math.abs(dx), ay=Math.abs(dy), TH=14;
+
     if(ax<TH && ay<TH){
-      // tiny tap = forward
-      move(0,-1);
-    } else if(ax>ay){
-      move(dx>0?+1:-1,0);
-    } else {
-      move(0, dy>0?+1:-1);
+      // Tiny tap — split canvas into 3 vertical zones for easy left/forward/right
+      const rect = cvs.getBoundingClientRect();
+      const x = e.clientX - rect.left;
+      const third = rect.width/3;
+      if(x < third) move(-1,0);
+      else if(x > 2*third) move(+1,0);
+      else move(0,-1); // center = forward
+      return;
     }
+
+    if(ax>ay) move(dx>0?+1:-1, 0); else move(0, dy>0?+1:-1);
   }
 
+  // Pointer events (single unified model for touch/mouse/pen)
+  cvs.addEventListener('pointerdown', pressStart, {passive:false});
+  cvs.addEventListener('pointermove', pressMove,   {passive:false});
+  cvs.addEventListener('pointerup',   pressEnd,    {passive:false});
+  cvs.addEventListener('pointercancel', ()=>{ swipe.active=false; swipe.id=null; }, {passive:true});
+
+  // Keyboard (desktop)
   function onKey(e){
     if(e.key==='ArrowLeft' || e.key==='a' || e.key==='A'){ e.preventDefault(); move(-1,0); }
     if(e.key==='ArrowRight'|| e.key==='d' || e.key==='D'){ e.preventDefault(); move(+1,0); }
     if(e.key==='ArrowUp'   || e.key==='w' || e.key==='W' || e.key===' '){ e.preventDefault(); move(0,-1); }
     if(e.key==='ArrowDown' || e.key==='s' || e.key==='S'){ e.preventDefault(); move(0,+1); }
   }
+  window.addEventListener('keydown', onKey, {passive:false});
 
-  // Controls
+  // D-pad (mobile-friendly)
+  const dpad = document.getElementById('laneDpad');
+  if(dpad){
+    const bind = (sel, fn)=>{
+      const b = dpad.querySelector(sel);
+      if(!b) return;
+      const go = (e)=>{ e.preventDefault(); fn(); };
+      b.addEventListener('pointerdown', go, {passive:false});
+      b.addEventListener('click', go, {passive:false});
+    };
+    bind('.left',  ()=> move(-1,0));
+    bind('.right', ()=> move(+1,0));
+    bind('.up',    ()=> move(0,-1));
+    bind('.down',  ()=> move(0,+1));
+  }
+
+  /* ---------- Controls ---------- */
   function start(){
-    reset();
-    running=true; paused=false; lastTs=0;
+    reset(); running=true; paused=false; lastTs=0;
     cancelAnimationFrame(loop); loop=null;
     loop = requestAnimationFrame(frame);
     document.getElementById('lanePause').textContent='Pause';
@@ -2748,41 +2750,24 @@ function openBreaker(){
   }
   function quit(){
     if(earned>0){
-      state.chads += BigInt(earned);
-      saveStateLocal(state);
-      refreshUI();
-      showToast('<span class="accent">+'+earned+'</span> chads added to balance.');
+      try{
+        state.chads = (state?.chads ?? 0n) + BigInt(earned);
+        saveStateLocal?.(state);
+        refreshUI?.();
+        showToast?.(`<span class="accent">+${earned}</span> chads added to balance.`);
+      }catch{}
     }
     running=false; cancelAnimationFrame(loop); loop=null;
     closeOverlay('laneModal');
   }
 
-  // Wire UI
   document.getElementById('laneStart').onclick = start;
   document.getElementById('lanePause').onclick = pause;
   document.getElementById('laneQuit').onclick  = quit;
 
-  // Pointer + keyboard
-  cvs.addEventListener('pointerdown', onPointerDown, {passive:false});
-  cvs.addEventListener('pointerup',   onPointerUp,   {passive:false});
-  cvs.addEventListener('pointercancel', ()=>{ swipe.active=false; swipe.id=null; }, {passive:true});
-  window.addEventListener('keydown', onKey, {passive:false});
-
-  // Keep the canvas crisp on rotation/resize
-  const ro = new ResizeObserver(()=> resizeCanvas());
-  ro.observe(cvs);
-
-  // If you open from the Play list, this ensures size is correct after the modal shows
-  window.openLaneHopper = ()=>{
-    closeOverlay('playOverlay');
-    openOverlay('laneModal');
-    // give layout a tick, then size
-    setTimeout(()=>{ resizeCanvas(); }, 30);
-  };
-// Back-compat: if anything calls openLane(), forward it here.
-window.openLane = window.openLaneHopper;
+  // Keep canvas crisp on resize/orientation
+  new ResizeObserver(resizeCanvas).observe(cvs);
 })();
-
   /* ===== Hamster-style HEXAGON (drag, merge stacks, clear at threshold) ===== */
 (function(){
   const modal = document.getElementById('hexModal');
