--- a/index.html
+++ b/index.html
@@ -166,7 +166,39 @@ body{
 
 .avatar img{width:100%; height:100%; object-fit:cover; display:block}
 .userpill .name{ font-weight:800; letter-spacing:.2px; max-width:160px; white-space:nowrap; overflow:hidden; text-overflow:ellipsis; }
-.stat{ background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01)); padding:8px 12px; border-radius:10px; border:1px solid var(--glass); min-width:140px; text-align:right; box-shadow:0 12px 30px rgba(0,0,0,0.6) }
+/* TEXTURED stats card (top-right) */
+.stat{
+  position: relative;
+  padding: 10px 14px;
+  min-width: 140px;
+  text-align: right;
+  border-radius: 12px;
+  border: 1px solid rgba(255,255,255,.08);
+  box-shadow: 0 12px 30px rgba(0,0,0,.6);
+
+  /* texture + readability overlay */
+  background-image:
+    linear-gradient(180deg, rgba(255,255,255,.08), rgba(0,0,0,.28)),
+    url('img/metaltexture.jpg');              /* ← adjust path if needed */
+  background-size: 100% 100%, cover;          /* overlay stretches; texture covers */
+  background-position: center, center;
+  background-repeat: no-repeat, no-repeat;
+  background-blend-mode: soft-light, normal;  /* blend overlay with texture */
+
+  /* tiny contrast bump for numbers on busy textures */
+  color: #eaf1f8;
+  text-shadow: 0 1px 1px rgba(0,0,0,.35);
+}
+
+/* optional: a thin inner ring to match your glass vibe */
+.stat::after{
+  content:"";
+  position:absolute; inset:0;
+  pointer-events:none;
+  box-shadow: inset 0 0 0 1px rgba(255,255,255,.05);
+  border-radius: inherit;
+}
+
 .label{font-size:12px;color:#9aa3ab} .value{font-size:18px;font-weight:800;color:#fff} .small{font-size:12px;color:#98a3aa;margin-top:6px}
 
 /* Main */
