--- a/index.html
+++ b/index.html
@@ -6,6 +6,83 @@
 <title>ChadiliZe — Telegram Mini App</title>
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
 <style>
+/* ===== 2048 Swipe (tw2) ===== */
+.tw2-wrap{position:relative; inset:0; width:100%; height:100%; overflow:hidden; border-radius:12px;}
+.tw2-bgglow{
+  position:absolute; inset:-20% -10% -10% -10%; pointer-events:none; z-index:0;
+  background:
+    radial-gradient(60% 40% at 25% 10%, rgba(120,200,255,.14), transparent 55%),
+    radial-gradient(70% 50% at 80% 0%, rgba(255,120,200,.10), transparent 60%),
+    radial-gradient(120% 80% at 50% 110%, rgba(255,216,107,.08), transparent 60%),
+    linear-gradient(180deg,#0b0f14,#070a0d);
+  filter: saturate(105%);
+  animation: tw2Hue 18s ease-in-out infinite alternate;
+}
+@keyframes tw2Hue{ 0%{filter:hue-rotate(0deg) saturate(105%)} 100%{filter:hue-rotate(14deg) saturate(110%)} }
+
+.tw2-grid{
+  position:absolute; inset:10px; padding:12px; z-index:2;
+  border-radius:16px;
+  background:
+    linear-gradient(180deg,rgba(255,255,255,.06),rgba(255,255,255,.03)),
+    radial-gradient(120% 100% at 10% -20%, rgba(255,255,255,.08), transparent 40%),
+    linear-gradient(180deg,#0e1318,#0a0e12);
+  border:1px solid rgba(255,255,255,.08);
+  box-shadow: 0 24px 80px rgba(0,0,0,.55), inset 0 1px 0 rgba(255,255,255,.04);
+  display:grid; grid-template-columns:repeat(4,1fr); grid-template-rows:repeat(4,1fr); gap:10px;
+}
+.tw2-cell{
+  border-radius:12px;
+  background:linear-gradient(180deg,rgba(255,255,255,.05),rgba(255,255,255,.02));
+  box-shadow: inset 0 0 0 1px rgba(255,255,255,.04);
+}
+
+.tw2-tile{
+  position:absolute; z-index:3; width:var(--size); height:var(--size);
+  border-radius:14px; display:grid; place-items:center; font-weight:900;
+  font-size:clamp(18px, 6.6vw, 28px);
+  color:#0b0f14; letter-spacing:.6px;
+  transform:translate(var(--x), var(--y)) scale(1);
+  transition: transform 180ms cubic-bezier(.2,.8,.2,1);
+  will-change: transform;
+  box-shadow:
+    0 12px 36px rgba(0,0,0,.45),
+    inset 0 1px 0 rgba(255,255,255,.28);
+}
+.tw2-tile .num{position:relative; z-index:2; text-shadow: 0 1px 0 rgba(255,255,255,.35);}
+
+/* glossy sheen over tiles using mix-blend for depth */
+.tw2-tile::after{
+  content:""; position:absolute; inset:0; border-radius:inherit; pointer-events:none; z-index:1;
+  background:
+    linear-gradient(20deg, rgba(255,255,255,.28), transparent 40%),
+    radial-gradient(120% 90% at 50% -10%, rgba(255,255,255,.25), transparent 60%);
+  mix-blend-mode:overlay;
+  opacity:.55;
+}
+
+/* spawn + merge pops */
+.tw2-pop{ animation: tw2Pop .22s ease-out; }
+@keyframes tw2Pop{ 0%{transform:translate(var(--x),var(--y)) scale(.75)} 80%{transform:translate(var(--x),var(--y)) scale(1.06)} 100%{transform:translate(var(--x),var(--y)) scale(1)} }
+
+/* floating sparkle on big merges */
+.tw2-spark{
+  position:absolute; width:8px; height:8px; border-radius:50%; pointer-events:none; z-index:4;
+  background:radial-gradient(circle, rgba(255,255,255,.9), rgba(255,255,255,0));
+  transform:translate(-50%,-50%) scale(1); opacity:.95;
+  animation: tw2Spark .5s ease-out forwards;
+}
+@keyframes tw2Spark{ to{ transform:translate(-50%,-90%) scale(0.7); opacity:0 } }
+
+/* confetti on reaching 2048+ */
+.tw2-confetti{ position:absolute; width:6px; height:10px; border-radius:2px; z-index:6; opacity:.95; animation: tw2Conf .9s ease-out forwards; }
+@keyframes tw2Conf{ to{ transform:translate(var(--tx), var(--ty)) rotate(420deg); opacity:0 } }
+
+/* gesture catcher (no visuals, handles swipes) */
+.tw2-gesture{ position:absolute; inset:0; z-index:5; touch-action:none; }
+
+/* helpful when blending backgrounds for depth */
+
  /* Lane Hopper (easier) */
   #laneCanvas{
     width:100%;
@@ -389,6 +466,11 @@ canvas{ display:block }
           <div class="tile level" style="flex:1; min-height:68px" onclick="openFlappy()">
             <div><div style="font-weight:800">Flappy Bird</div></div>
           </div>
+<!-- inside the Play overlay's tile grid -->
+<div class="tile level" style="flex:1; min-height:68px" onclick="open2048Swipe()">
+  <div><div style="font-weight:800">2048 Swipe</div></div>
+</div>
+
 <div class="tile level" style="flex:1; min-height:68px" onclick="openLaneHopper()">Lane Hopper</div>
 
 
@@ -549,6 +631,36 @@ canvas{ display:block }
         <p class="note">Tap / Space / Click to flap. Coins give +15 chads. Quit to collect.</p>
       </div>
     </div>
+<!-- 2048 SWIPE Modal -->
+<div class="overlay" id="tw2Modal">
+  <div class="panel">
+    <div class="row">
+      <h2>2048 Swipe</h2>
+      <div class="row" style="gap:8px">
+        <button class="tile level" style="padding:8px 12px" id="tw2Start">Start</button>
+        <button class="tile level" style="padding:8px 12px" id="tw2Pause">Pause</button>
+        <button class="tile level" style="padding:8px 12px" id="tw2Quit">Quit</button>
+      </div>
+    </div>
+
+    <div class="row" style="gap:12px">
+      <div class="note">Score: <b id="tw2Score">0</b></div>
+      <div class="note">Best tile: <b id="tw2Best">0</b></div>
+      <div class="note">Session chads: <b id="tw2Earned">0</b></div>
+    </div>
+
+    <div class="game-9x16">
+      <div class="tw2-wrap" id="tw2Wrap">
+        <div class="tw2-bgglow"></div>
+        <div class="tw2-grid" id="tw2Grid" aria-label="2048 board"></div>
+        <div class="tw2-gesture" id="tw2Gesture"></div>
+      </div>
+    </div>
+
+    <p class="note">Swipe or use ◀▶▲▼. Merge tiles to reach 2048. Quit to collect chads.</p>
+  </div>
+</div>
+
 
 <!-- ===== LANE HOPPER Modal (fixed input) ===== -->
 <div class="overlay" id="laneModal">
@@ -2876,6 +2988,309 @@ function openBreaker(){
   window.openLaneHopper = opener;
   window.openLane = opener;
 })();
+
+
+/* 2048 Swipe — beautiful, animated, chads-enabled */
+(function(){
+  const wrap   = document.getElementById('tw2Wrap');
+  if(!wrap) return;
+  const gridEl = document.getElementById('tw2Grid');
+  const gestEl = document.getElementById('tw2Gesture');
+
+  /* === Layout math === */
+  let W=0, H=0, pad=12, gap=10, cell=0, size=0, startX=0, startY=0;
+  function measure(){
+    const r = gridEl.getBoundingClientRect();
+    W = Math.floor(r.width); H = Math.floor(r.height);
+    const inner = W - pad*2;
+    cell = Math.floor((inner - gap*3)/4);
+    size = cell; startX = pad; startY = pad;
+    wrap.style.setProperty('--size', cell+'px');
+  }
+
+  /* === Board data === */
+  let tiles = new Map(); // id -> {id,value,row,col, merging:false}
+  let board = [...Array(4)].map(()=>Array(4).fill(null));
+  let nextId=1, score=0, best=0, earned=0, running=false, paused=false;
+
+  /* === Helpers === */
+  const pos = (r,c)=>({ x: startX + c*(cell+gap), y: startY + r*(cell+gap) });
+  function rndEmptyCell(){
+    const empty=[];
+    for(let r=0;r<4;r++) for(let c=0;c<4;c++) if(!board[r][c]) empty.push([r,c]);
+    return empty.length? empty[Math.floor(Math.random()*empty.length)] : null;
+  }
+  function spawnTile(count=1){
+    for(let i=0;i<count;i++){
+      const spot = rndEmptyCell(); if(!spot) return;
+      const [r,c] = spot;
+      const val = (Math.random() < 0.10) ? 4 : 2; // 10% 4s, otherwise 2s
+      const id = nextId++;
+      const t = {id, value:val, row:r, col:c};
+      tiles.set(id,t); board[r][c]=id;
+      drawTile(t, true);
+    }
+  }
+
+  /* === Rendering === */
+  function buildGridBack(){
+    gridEl.innerHTML='';
+    for(let i=0;i<16;i++){
+      const cellEl = document.createElement('div');
+      cellEl.className='tw2-cell';
+      gridEl.appendChild(cellEl);
+    }
+  }
+  function tileColor(v){
+    const n = Math.log2(v);             // 1..11+
+    const hue = 44 + n*18;              // golden→pink range
+    const l1 = Math.min(92, 90 + n*1.2);
+    const l2 = Math.max(38, 54 - n*1.8);
+    return `linear-gradient(180deg, hsl(${hue} 92% ${l1}%), hsl(${hue+6} 85% ${l2}%))`;
+  }
+  function drawTile(t, popping=false){
+    let el = document.getElementById('tw2_tile_'+t.id);
+    const p = pos(t.row, t.col);
+    if(!el){
+      el = document.createElement('div');
+      el.id = 'tw2_tile_'+t.id;
+      el.className = 'tw2-tile';
+      el.innerHTML = `<div class="num"></div>`;
+      wrap.appendChild(el);
+    }
+    el.style.setProperty('--x', p.x+'px');
+    el.style.setProperty('--y', p.y+'px');
+    el.style.transform = `translate(${p.x}px,${p.y}px)`;
+    el.style.background = tileColor(t.value);
+    el.querySelector('.num').textContent = t.value;
+    if(popping){ el.classList.add('tw2-pop'); setTimeout(()=> el.classList.remove('tw2-pop'), 240); }
+  }
+
+  function removeTile(id){
+    const el = document.getElementById('tw2_tile_'+id);
+    if(el) el.remove();
+    tiles.delete(id);
+  }
+
+  /* === Input (Pointer Events unify touch & mouse) === */
+  let drag=null;
+  function startPtr(e){
+    if(!running||paused) return;
+    const p = e.touches? e.touches[0] : e;
+    drag = {x:p.clientX, y:p.clientY, id:e.pointerId||0};
+    try{ gestEl.setPointerCapture?.(e.pointerId); }catch{}
+  }
+  function endPtr(e){
+    if(!drag) return;
+    const p = e.changedTouches? e.changedTouches[0] : e;
+    const dx=p.clientX-drag.x, dy=p.clientY-drag.y;
+    drag=null;
+    const ax=Math.abs(dx), ay=Math.abs(dy), TH=16;
+    if(ax<TH && ay<TH) return;
+    if(ax>ay) move(dx>0? 'right':'left'); else move(dy>0? 'down':'up');
+  }
+  gestEl.addEventListener('pointerdown', startPtr, {passive:true});
+  gestEl.addEventListener('pointerup',   endPtr,   {passive:true});
+  gestEl.addEventListener('pointercancel', ()=> drag=null, {passive:true});
+  gestEl.addEventListener('touchstart', startPtr, {passive:true});
+  gestEl.addEventListener('touchend',   endPtr,   {passive:true});
+
+  window.addEventListener('keydown', (e)=>{
+    if(!running||paused) return;
+    const k=e.key;
+    if(['ArrowLeft','ArrowRight','ArrowUp','ArrowDown','a','d','w','s'].includes(k)) e.preventDefault();
+    if(k==='ArrowLeft'||k==='a') move('left');
+    if(k==='ArrowRight'||k==='d') move('right');
+    if(k==='ArrowUp'||k==='w') move('up');
+    if(k==='ArrowDown'||k==='s') move('down');
+  }, {passive:false});
+
+  /* === Moves & merges === */
+  const VEC = { left:[0,-1], right:[0,1], up:[-1,0], down:[1,0] };
+  function line(r,c, dir){ const [dr,dc]=VEC[dir]; const out=[]; for(let i=0;i<4;i++){ const rr=r+dr*i, cc=c+dc*i; if(rr>=0&&rr<4&&cc>=0&&cc<4) out.push([rr,cc]); } return out; }
+  function walk(dir){
+    // return cells in the correct visiting order
+    const cells=[];
+    if(dir==='left')  for(let r=0;r<4;r++) for(let c=0;c<4;c++) cells.push([r,c]);
+    if(dir==='right') for(let r=0;r<4;r++) for(let c=3;c>=0;c--) cells.push([r,c]);
+    if(dir==='up')    for(let c=0;c<4;c++) for(let r=0;r<4;r++) cells.push([r,c]);
+    if(dir==='down')  for(let c=0;c<4;c++) for(let r=3;r>=0;r--) cells.push([r,c]);
+    return cells;
+  }
+
+  function move(dir){
+    let moved=false, merges=[];
+    const mergedFlag=[...Array(4)].map(()=>Array(4).fill(false));
+
+    // FLIP-style: remember old positions
+    const oldPos=new Map(); tiles.forEach(t=> oldPos.set(t.id, {row:t.row,col:t.col}));
+
+    for(const [r,c] of walk(dir)){
+      const id=board[r][c]; if(!id) continue;
+      const t=tiles.get(id); let nr=r, nc=c;
+      const [dr,dc]=VEC[dir];
+      // slide until blocked
+      while(true){
+        const rr=nr+dr, cc=nc+dc;
+        if(rr<0||rr>=4||cc<0||cc>=4) break;
+        if(!board[rr][cc]){ nr=rr; nc=cc; }
+        else{
+          const tid=board[rr][cc], ot=tiles.get(tid);
+          if(!mergedFlag[rr][cc] && ot.value===t.value){
+            // merge into (rr,cc)
+            mergedFlag[rr][cc]=true;
+            nr=rr; nc=cc;
+            merges.push({fromId:t.id, intoId:ot.id, at:[rr,cc]});
+          }
+          break;
+        }
+      }
+      if(nr!==r || nc!==c) moved=true;
+      board[r][c]=null;
+      if(board[nr][nc] && tiles.get(board[nr][nc]).value===t.value){
+        // placeholder, actual merge later
+      } else {
+        board[nr][nc]=t.id; t.row=nr; t.col=nc;
+      }
+    }
+
+    // apply merges
+    for(const m of merges){
+      const a=tiles.get(m.fromId), b=tiles.get(m.intoId);
+      if(!a||!b) continue;
+      // remove "a"
+      removeTile(a.id);
+      // double "b"
+      b.value *= 2;
+      score += b.value;
+      best = Math.max(best, b.value);
+      spawnSpark(pos(b.row,b.col));
+      drawTile(b, true);
+      // chads payout (gentle): + value/8
+      const gain = Math.max(0, Math.floor(b.value/8));
+      if(gain){ earned += gain; updateHUD(); }
+      // special confetti on hitting 2048+
+      if(b.value===2048) confetti(pos(b.row,b.col));
+    }
+
+    if(!moved && merges.length===0) return; // invalid move
+    tickTone();
+
+    // animate to new positions
+    tiles.forEach(t=>{
+      const was = oldPos.get(t.id); if(!was) return;
+      const from = pos(was.row, was.col), to = pos(t.row, t.col);
+      const el = document.getElementById('tw2_tile_'+t.id);
+      if(!el) return;
+      // FLIP: jump to old, then to new (composited transform) 
+      el.style.transform = `translate(${from.x}px,${from.y}px)`;
+      // next frame, go to new
+      requestAnimationFrame(()=>{ el.style.transform = `translate(${to.x}px,${to.y}px)`; });
+    });
+
+    updateHUD();
+
+    // spawn a new tile, then check game over
+    setTimeout(()=>{
+      spawnTile(1);
+      if(!canMove()){
+        fancyAlert?.('No more moves — press Start to try again or Quit to collect.');
+      }
+    }, 160);
+  }
+
+  function canMove(){
+    // any empty?
+    for(let r=0;r<4;r++) for(let c=0;c<4;c++) if(!board[r][c]) return true;
+    // any merges?
+    for(let r=0;r<4;r++) for(let c=0;c<4;c++){
+      const id=board[r][c]; if(!id) continue;
+      const v=tiles.get(id).value;
+      if((r<3 && board[r+1][c] && tiles.get(board[r+1][c]).value===v) ||
+         (c<3 && board[r][c+1] && tiles.get(board[r][c+1]).value===v)) return true;
+    }
+    return false;
+  }
+
+  /* === Sparkles & confetti === */
+  function spawnSpark(p){
+    for(let i=0;i<8;i++){
+      const s=document.createElement('div'); s.className='tw2-spark';
+      const a = Math.random()*Math.PI*2, d = 12 + Math.random()*24;
+      const x = p.x+cell/2 + Math.cos(a)*d, y = p.y+cell/2 + Math.sin(a)*d;
+      s.style.left = x+'px'; s.style.top = y+'px';
+      wrap.appendChild(s); setTimeout(()=> s.remove(), 520);
+    }
+  }
+  function confetti(p){
+    for(let i=0;i<28;i++){
+      const c=document.createElement('div'); c.className='tw2-confetti';
+      c.style.left = (p.x+cell/2)+'px'; c.style.top = (p.y+cell/2)+'px';
+      c.style.background = `hsl(${Math.random()*360} 90% 60%)`;
+      const tx = (Math.random()*2-1)*120 + 'px';
+      const ty = (-80 - Math.random()*140) + 'px';
+      c.style.setProperty('--tx', tx); c.style.setProperty('--ty', ty);
+      wrap.appendChild(c); setTimeout(()=> c.remove(), 950);
+    }
+  }
+
+  /* === Web Audio: tiny move/merge tones === */
+  let audioCtx=null, master=null;
+  function ensureAudio(){
+    if(audioCtx) return;
+    audioCtx = new (window.AudioContext||window.webkitAudioContext)();
+    master = audioCtx.createGain(); master.gain.value = 0.10; master.connect(audioCtx.destination);
+  }
+  function beep(freq=520, dur=0.06){
+    if(!audioCtx) return;
+    const o = audioCtx.createOscillator(), g = audioCtx.createGain();
+    o.type='triangle'; o.frequency.value=freq;
+    g.gain.value=0.001; const t = audioCtx.currentTime;
+    g.gain.setValueAtTime(0.18, t); g.gain.exponentialRampToValueAtTime(0.00001, t+dur);
+    o.connect(g).connect(master); o.start(t); o.stop(t+dur+0.01);
+  }
+  function tickTone(){ ensureAudio(); beep(520,0.05); }
+
+  /* === HUD / lifecycle === */
+  function updateHUD(){
+    document.getElementById('tw2Score').textContent  = score;
+    document.getElementById('tw2Best').textContent   = best;
+    document.getElementById('tw2Earned').textContent = earned;
+  }
+
+  function reset(){
+    measure(); buildGridBack();
+    tiles.clear(); for(let r=0;r<4;r++) for(let c=0;c<4;c++) board[r][c]=null;
+    wrap.querySelectorAll('.tw2-tile,.tw2-confetti,.tw2-spark').forEach(n=>n.remove());
+    score=0; best=0; earned=0; updateHUD();
+    spawnTile(2);
+  }
+
+  function start(){ running=true; paused=false; document.getElementById('tw2Pause').textContent='Pause'; reset(); }
+  function pause(){ if(!running) return; paused=!paused; document.getElementById('tw2Pause').textContent = paused?'Resume':'Pause'; }
+  function quit(){
+    running=false; paused=false;
+    if(earned>0){
+      try{
+        state.chads += BigInt(earned);
+        saveStateLocal(state); refreshUI(); showToast?.(`<span class="accent">+${earned}</span> chads added to balance.`);
+      }catch{}
+    }
+    closeOverlay('tw2Modal');
+  }
+
+  // Buttons + opener
+  document.getElementById('tw2Start').addEventListener('click', start);
+  document.getElementById('tw2Pause').addEventListener('click', pause);
+  document.getElementById('tw2Quit') .addEventListener('click', quit);
+  window.open2048Swipe = ()=>{ closeOverlay('playOverlay'); openOverlay('tw2Modal'); start(); };
+
+  // Responsive sizing
+  new ResizeObserver(()=> measure()).observe(gridEl);
+})();
+
+
+
   /* ===== Hamster-style HEXAGON (drag, merge stacks, clear at threshold) ===== */
 (function(){
   const modal = document.getElementById('hexModal');
